--- a/package.json
+++ b/package.json
@@ -11,9 +11,7 @@
   "license": "ISC",
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^1.0.2",
+    "dotenv": "^16.0.1",
     "hardhat": "^2.10.0"
-  },
-  "dependencies": {
-    "dotenv": "^16.0.1"
   }
 }
